cluster/infra/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
  labels:
    app.kubernetes.io/name: hello
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
